# sympl_int

./: .gitignore  pyproject.toml
scripts/: comparisons.py  comparisons_optimized.py  plot_orbits.py  plot_orbits_yoshida_only.py  solution_comparisons.py
src/sympl_int/: __init__.py  euler.py  runge_kutta.py  utils.py  verlet.py  yoshida.py  yoshida6.csv  yoshida8.csv
