[project]
name = "sympl-int"
version = "0.1.0"
description = ""
authors = [
    {name = "kylarf",email = "56093925+kylarf@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "numba (>=0.64.0,<0.65.0)"
]

[dependency-groups]
dev = [
    "python-lsp-server[flake8] (>=1.14.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pylsp-mypy (>=0.7.1,<0.8.0)",
    "black (>=26.1.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
